--- a/index.html
+++ b/index.html
@@ -223,6 +223,6 @@
         <div class="credit">created by <span>SK MD MUZAMMIL</span> | all rights reserved!</div>
     </section>
     <!-- footer section ends -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
